--- a/override.css
+++ b/override.css
@@ -29,6 +29,6 @@ button:focus {
 
 @layer components {
   .option {
-    @apply cursor-pointer hover:bg-gray-100 p-2  rounded-lg transition-all duration-500 ease-in-out;
+    @apply cursor-pointer hover:bg-gray-100 px-3 p-1  rounded-lg transition-all duration-500 ease-in-out;
   }
 }
