--- a/override.css
+++ b/override.css
@@ -58,3 +58,32 @@ html::-webkit-scrollbar-thumb {
 .MuiPaper-rounded {
   border-radius: 15px !important;
 }
+
+/* print stuff */
+
+@page {
+  margin: 1in;
+}
+
+@media print {
+  body {
+    background: none;
+  }
+
+  #mui-rte-editor {
+    width: 6.5in;
+    height: 9in;
+    padding: 0;
+    margin: 0;
+    box-shadow: none;
+    align-self: flex-start;
+  }
+
+  #mui-rte-toolbar {
+    display: none;
+  }
+
+  header {
+    display: none !important;
+  }
+}
