--- a/override.css
+++ b/override.css
@@ -47,6 +47,14 @@ html::-webkit-scrollbar-thumb {
   border: 3.5px solid rgba(0, 0, 0, 0);
 }
 
+html::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+html::-webkit-scrollbar-thumb:active {
+  background-color: rgba(0, 0, 0, 0.35);
+}
+
 @tailwind components;
 
 @layer components {
@@ -66,8 +74,15 @@ html::-webkit-scrollbar-thumb {
 }
 
 @media print {
+  @page {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
   body {
     background: none;
+    padding-top: 72px;
+    padding-bottom: 72px;
   }
 
   #mui-rte-editor {
@@ -85,5 +100,15 @@ html::-webkit-scrollbar-thumb {
 
   header {
     display: none !important;
+  }
+
+  hr {
+    display: block;
+    height: 1px;
+    background: transparent;
+    width: 100%;
+    border: none;
+    border-top: solid 7px #2ecc40;
+    margin-left: -5px;
   }
 }
