--- a/override.css
+++ b/override.css
@@ -112,3 +112,10 @@ html::-webkit-scrollbar-thumb:active {
     margin-left: -5px;
   }
 }
+
+@media only screen and (max-width: 380px) {
+  .template {
+    height: 10rem;
+    width: 7.5rem;
+  }
+}
